src/objects/New__c.object
<CustomObject>
    <fields>
        <fullName>New_Headline__c</fullName>
        <label>New Headline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>News_Text__c</fullName>
        <label>News Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publication_Date__c</fullName>
        <label>Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <label>Publication</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published to Website</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>News</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>New Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>